Fix Dark Mode menu font color

--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -85,7 +85,6 @@ h4 {
   padding-top: 5px;
   cursor: pointer;
   display: inline-block;
-  color: #1a1a1a;
   line-height: 40px;
   vertical-align: middle;
   font-size: 18px;
@@ -209,7 +208,6 @@ h4 {
   padding-top: 4px;
   cursor: pointer;
   display: inline-block;
-  color: #1a1a1a;
   line-height: 40px;
   font-size: 18px;
   margin-left: 75px;
@@ -339,7 +337,6 @@ input[type="button"]:focus {
 
 .GameLobby_Input {
   font-family: var(--font-family);
-  color: var(--dark-color);
   border: 1px solid var(--dark-color);
   box-shadow: var(--button-box-shadow);
   padding-left: 5px;
